--- a/index.html
+++ b/index.html
@@ -259,16 +259,12 @@
 
 
 </div>
-    
+<!-- Şu what's Happening kısmından çok şey öğrendim bence
+     .gitignore dosyası da ekledim biraz uğraştırdı ama
+Vel asıl kelam ümitter projemizin sonuna geldik aslında ilerde daha iyisini yapacağım
+Css sıkıcı ama lazım-->
 
 
 
 </body>
 </html>
-<script src="https://cdn.lordicon.com/fudrjiwc.js"></script>
-<lord-icon
-    
-    trigger="hover"
-    colors="primary:#ffffff"
-    style="width:40px;height:40px">
-</lord-icon>
